--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@fastify/websocket": "^8.3.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.25.2",
+    "fluent-ffmpeg": "^2.1.3",
     "pino-pretty": "^10.3.1",
     "ws": "^8.16.0"
   }
-} 
+}
